k8s/prod/0.1/rollout/flask-ui-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-ui-external-vs
  namespace: ms-prod
spec:
  hosts:
  - "prod-flask.kkkk.com"
  gateways:
  - flask-ui-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: flask-ui
        subset: prod
      weight: 100
    - destination:
        host: flask-ui
        subset: canary
      weight: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-ui-internal-vs
spec:
  hosts:
  - flask-ui
  http:
  - route:
    - destination:
        host: flask-ui
        subset: prod
      weight: 100
    - destination:
        host: flask-ui
        subset: canary
      weight: 0
